<resources>
    <string name="app_name">Dice Roller</string>
    <string name="roll">Roll</string>
    <string name="title_activity_settings">Settings</string>

    <string name="dice_number_title">Dice number</string>
    <string name="dice_number_default_value" translatable="false">1</string>

    <string name="pref_dice_key" translatable="false">dice_key</string>

    <string name="pref_one_dice_label">1 dice</string>
    <string name="pref_two_dice_label">2 dice</string>
    <string name="pref_three_dice_label">3 dice</string>
    <string name="pref_four_dice_label">4 dice</string>

    <string name="pref_one_dice_value" translatable="false">1</string>
    <string name="pref_two_dice_value" translatable="false">2</string>
    <string name="pref_three_dice_value" translatable="false">3</string>
    <string name="pref_four_dice_value" translatable="false">4</string>
    
    <string name="action_settings">Settings</string>
</resources>
