<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:columnCount="2">
    <ImageView
        android:id="@+id/dice_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dice_1"
        tools:src="@drawable/dice_1"/>

    <ImageView
        android:id="@+id/dice_image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dice_1"
        tools:src="@drawable/dice_1"/>

    <ImageView
        android:id="@+id/dice_image3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dice_1"
        tools:src="@drawable/dice_1"/>


    <ImageView
        android:id="@+id/dice_image4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dice_1"
        tools:src="@drawable/dice_1"/>
    </GridLayout>

    <Button
        android:background="@drawable/rounded_corners"
        android:id="@+id/roll_button"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/roll"
        android:layout_height="wrap_content"/>
</LinearLayout>
    </ScrollView>
</layout>